support java default gc algorithm